--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-fixed-top navbar-light bg-faded">
-    <div class='container'>	
-      <ul class="nav navbar-nav">
+<nav class="navbar navbar-fixed-top navbar-light bg-faded nav-styles">
+    <div class='container'> 
+      <ul class="nav navbar-header">
         <li class='nav-item'>
           <a class='nav-link' routerLink="/home" routerLinkActive="active">Home</a>
         </li>
@@ -21,7 +21,6 @@
       </ul>
     </div>
   </nav>
-  
-  <div class="app-body">
+  <div class=".app-body">
     <router-outlet></router-outlet>
   </div>
